Working in progress : Practice data details

--- a/Modacity/Modacity/ViewController/Details/StatisticsView.xib
+++ b/Modacity/Modacity/ViewController/Details/StatisticsView.xib
@@ -16,6 +16,16 @@
                 <outlet property="buttonPreviousWeek" destination="iLM-f1-wJD" id="h6f-HL-lOv"/>
                 <outlet property="chartViewBarGraph" destination="JII-ER-AnU" id="CXf-0n-yh1"/>
                 <outlet property="chartViewStarRatings" destination="GuV-gy-AU7" id="deF-6Q-shE"/>
+                <outlet property="labelAverageSessionDuration" destination="RbO-Hb-U7u" id="dSS-z3-mbq"/>
+                <outlet property="labelAverageSessionUnit" destination="Dy5-kT-QBg" id="KDB-3H-1AH"/>
+                <outlet property="labelLastMonthTotal" destination="VeP-j5-VC4" id="dz4-5a-3n7"/>
+                <outlet property="labelLastMonthUnit" destination="8ZB-Vz-brF" id="HOH-WB-rjD"/>
+                <outlet property="labelLastWeekTotal" destination="Fbl-pd-Gr2" id="QHw-bP-UxF"/>
+                <outlet property="labelLastWeekUnit" destination="m1l-5g-FO4" id="4lf-GB-Qsl"/>
+                <outlet property="labelThisMonthTotal" destination="7IK-TC-Bqg" id="Ff4-ml-E4d"/>
+                <outlet property="labelThisMonthUnit" destination="dqw-ou-Jts" id="h6p-1h-S9Z"/>
+                <outlet property="labelThisWeekTotal" destination="uei-r9-PbS" id="Cd7-YZ-VZT"/>
+                <outlet property="labelThisWeekUnit" destination="Qk3-2N-Wbr" id="1T1-gy-ynK"/>
                 <outlet property="labelWeekDuration" destination="M4o-s6-ngd" id="VBe-sk-Wb1"/>
                 <outlet property="viewAverageSessionDurationPanel" destination="CeE-At-dXK" id="lHn-ZX-MX8"/>
                 <outlet property="viewContent" destination="mXc-6y-zp0" id="yO9-UA-euQ"/>
