--- a/Modacity/Modacity/ViewController/Details/PracticeHistoryCell.xib
+++ b/Modacity/Modacity/ViewController/Details/PracticeHistoryCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="284" id="KGk-i7-Jjw" customClass="PracticeHistoryCell" customModule="Modacity" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="284" id="KGk-i7-Jjw" customClass="PracticeHistoryCell" customModule="Modacity" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -85,12 +85,14 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="MpL-fs-sDY" secondAttribute="trailing" constant="10" id="169-vV-JZy"/>
                     <constraint firstItem="MpL-fs-sDY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="360-jC-Knh"/>
                     <constraint firstItem="MpL-fs-sDY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="yDg-qy-Nm7"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="constraintForDetailsListHeight" destination="rDq-lW-ZxN" id="3Ev-Mo-lN7"/>
